--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,8 +35,9 @@ jobs:
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
           
-      - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
+      
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.gh_token }}
-          branch: main 
+          branch: ${{ github.ref }}
