--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,4 +40,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.gh_token }}
-          branch: ${{ github.ref }}
+          #branch: ${{ github.ref }}
