--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          force_with_lease: true
-          
+          github_token: ${{ secrets.gh_token }}
+          #branch: ${{ github.ref }}
