--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,3 +41,5 @@ jobs:
         with:
           github_token: ${{ secrets.gh_token }}
           #branch: ${{ github.ref }}
+          branch: main
+          force: true
