--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,13 +10,13 @@ jobs:
     steps:
 
       - name: checkout repo content
-        uses: actions/checkout@v3 # Use the latest version available
+        uses: actions/checkout@v2 # Use the latest version available
 
 
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # install the python version needed
+          python-version: '3.9' # install the python version needed
           
       - name: install python packages
         run: |
@@ -37,9 +37,7 @@ jobs:
           
       
       - name: Push changes
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.gh_token }}
-          #branch: ${{ github.ref }}
           branch: main
-          force: true
