--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 0 * * *' # At 12:00 AM every day
+    - cron: '0 0 * * 1' # At 00:00 on Monday
 
 jobs:
   build:
@@ -10,8 +10,7 @@ jobs:
     steps:
 
       - name: checkout repo content
-        uses: actions/checkout@v2 # Use the latest version available
-
+        uses: actions/checkout@v2 # checkout the repository content to github runner
 
       - name: setup python
         uses: actions/setup-python@v4
@@ -35,9 +34,8 @@ jobs:
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
           
-      
-      - name: Push changes
+      - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.gh_token }}
-          branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main 
