--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,5 +37,5 @@ jobs:
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          branch: main
+          github_token: ${{ secrets.GHITHUB_TOKEN }}
+          branch: ${{ github.ref }}
